Update: Resync enraiged-core publishable assets

--- a/publish/lang/en.json
+++ b/publish/lang/en.json
@@ -2,22 +2,37 @@
     "A new verification link has been sent to your email address.": "A new verification link has been sent to your email address.",
     "A recent attempt to log in with your secondary email address has failed.": "A recent attempt to log in with your secondary email address has failed.",
     "A verification link has been sent to your secondary email address.": "A verification link has been sent to your secondary email address.",
+    "Account Created:": "Account Created:",
+    "Active": "Active",
     "Administration": "Administration",
     "An email has been sent to your address.": "An email has been sent to your address.",
+    "Are you sure you want to delete this user?": "Are you sure you want to delete this user?",
     "Are you sure you want to delete your account?": "Are you sure you want to delete your account?",
     "Are you sure you want to proceed?": "Are you sure you want to proceed?",
+    "Are you sure you want to restore this user?": "Are you sure you want to restore this user?",
+    "Avatar color updated.": "Avatar color updated.",
+    "Avatar file deleted.": "Avatar file deleted.",
+    "Avatar file uploaded.": "Avatar file uploaded.",
+    "Back": "Back",
     "Cancel": "Cancel",
+    "Clear the search": "Clear the search",
     "Click here to re-send the verification email.": "Click here to re-send the verification email.",
     "Confirm": "Confirm",
     "Confirm Password": "Confirm Password",
     "Confirmation": "Confirmation",
+    "Create User": "Create User",
     "Create user": "Create user",
     "Created": "Created",
     "Current Password": "Current Password",
     "Dashboard": "Dashboard",
+    "Delete": "Delete",
     "Delete Account": "Delete Account",
+    "Delete user": "Delete user",
+    "Deleted": "Deleted",
+    "Edit": "Edit",
     "Edit My Profile": "Edit My Profile",
     "Edit Profile": "Edit Profile",
+    "Edit user": "Edit user",
     "Email": "Email",
     "Email Address": "Email Address",
     "Email Verification": "Email Verification",
@@ -25,7 +40,11 @@
     "Email or Username": "Email or Username",
     "English": "English",
     "Ensure your account is using a long, random password to stay secure.": "Ensure your account is using a long, random password to stay secure.",
+    "Export added to My Files.": "Export added to My Files.",
+    "Export started.": "Export started.",
+    "Export this data": "Export this data",
     "Feel free to contact the support team if you have questions or require assistance.": "Feel free to contact the support team if you have questions or require assistance.",
+    "File deleted.": "File deleted.",
     "Forgot Password": "Forgot Password",
     "French": "French",
     "Full Name": "Full Name",
@@ -37,7 +56,13 @@
     "If this update is unexpected, please take immediate action to protect your account by changing your password.": "If this update is unexpected, please take immediate action to protect your account by changing your password.",
     "If you did not create an account, no further action is required.": "If you did not create an account, no further action is required.",
     "If you did not request a password reset, no further action is required.": "If you did not request a password reset, no further action is required.",
+    "Impersonate user": "Impersonate user",
+    "Impersonating :name.": "Impersonating :name.",
+    "Inactive": "Inactive",
+    "Is Active": "Is Active",
     "Language": "Language",
+    "Last Updated:": "Last Updated:",
+    "Locale": "Locale",
     "Login": "Login",
     "Login Change": "Login Change",
     "Logout": "Logout",
@@ -48,6 +73,7 @@
     "New Device Login": "New Device Login",
     "New Password": "New Password",
     "Next": "Next",
+    "No": "No",
     "No file chosen": "No file chosen",
     "Optional": "Optional",
     "Password": "Password",
@@ -55,6 +81,7 @@
     "Please check your inbox for a verification email and follow the provided instructions.": "Please check your inbox for a verification email and follow the provided instructions.",
     "Please click the button below to verify your email address.": "Please click the button below to verify your email address.",
     "Please click the button below to verify your secondary email address.": "Please click the button below to verify your secondary email address.",
+    "Please confirm": "Please confirm",
     "Please log in with your primary email address and navigate to your profile to send a new verification email.": "Please log in with your primary email address and navigate to your profile to send a new verification email.",
     "Please provide your password to confirm you would like to permanently delete your account.": "Please provide your password to confirm you would like to permanently delete your account.",
     "Preview this color": "Preview this color",
@@ -64,6 +91,7 @@
     "Profile": "Profile",
     "Profile Information": "Profile Information",
     "Provide your email address and follow the instructions sent to your inbox to reset your password.": "Provide your email address and follow the instructions sent to your inbox to reset your password.",
+    "Refresh this data": "Refresh this data",
     "Remember me": "Remember me",
     "Register": "Register",
     "Resend Verification Email": "Resend Verification Email",
@@ -73,10 +101,13 @@
     "Required": "Required",
     "Salutation": "Salutation",
     "Save": "Save",
+    "Search for": "Search for",
     "Secondary Email": "Secondary Email",
     "Secondary Email or Username": "Secondary Email or Username",
     "Secondary Verification": "Secondary Verification",
     "Send Reset Link": "Send Reset Link",
+    "Show": "Show",
+    "Show user": "Show user",
     "Spanish": "Spanish",
     "Stopped impersonating.": "Stopped impersonating.",
     "Submit": "Submit",
@@ -85,6 +116,8 @@
     "The ip address is: :address": "The ip address is: :address",
     "The login credential is: :credential": "The login credential is: :credential",
     "The primary and secondary email addresses must be different.": "The primary and secondary email addresses must be different.",
+    "The user :attribute has been updated.": "The user :attribute has been updated.",
+    "The user has been updated.": "The user has been updated.",
     "There has just been a login to your account from a new device or ip address.": "There has just been a login to your account from a new device or ip address.",
     "There have been changes to your account login.": "There have been changes to your account login.",
     "This action cannot be undone.": "This action cannot be undone.",
@@ -99,12 +132,15 @@
     "Update Theme": "Update Theme",
     "Update your account's profile information and email address.": "Update your account's profile information and email address.",
     "Upload an avatar image": "Upload an avatar image",
+    "User": "User",
+    "Users": "Users",
     "Verify Email Address": "Verify Email Address",
     "Verify Secondary Email Address": "Verify Secondary Email Address",
     "View My Dashboard": "View My Dashboard",
     "Warning!": "Warning!",
     "Welcome!": "Welcome!",
     "Welcome to :app!": "Welcome to :app!",
+    "Yes": "Yes",
     "You are receiving this email because we received a password reset request for your account.": "You are receiving this email because we received a password reset request for your account.",
     "You must agree to check the little box.": "You must agree to check the little box.",
     "Your email address has been verified!": "Your email address has been verified!",
