--- a/publish/lang/fr.json
+++ b/publish/lang/fr.json
@@ -2,22 +2,37 @@
     "A new verification link has been sent to your email address.": "Un nouveau lien de vérification a été envoyé à votre adresse e-mail.",
     "A recent attempt to log in with your secondary email address has failed.": "Une tentative récente de connexion avec votre adresse e-mail secondaire a échoué.",
     "A verification link has been sent to your secondary email address.": "Un lien de vérification a été envoyé à votre adresse e-mail secondaire.",
+    "Account Created:": "Compte créé :",
+    "Active": "Actif",
     "Administration": "Administration",
     "An email has been sent to your address.": "Vous avez envoyé un courrier électronique à votre adresse.",
+    "Are you sure you want to delete this user?": "Etes-vous sûr de vouloir supprimer cet utilisateur ?",
     "Are you sure you want to delete your account?": "Etes-vous sûr de vouloir supprimer votre compte ?",
     "Are you sure you want to proceed?": "Êtes-vous sûr de vouloir continuer ?",
+    "Are you sure you want to restore this user?": "Etes-vous sûr de vouloir restaurer cet utilisateur ?",
+    "Avatar color updated.": "Couleur de l'avatar mise à jour.",
+    "Avatar file deleted.": "Fichier avatar supprimé.",
+    "Avatar file uploaded.": "Fichier avatar téléchargé.",
+    "Back": "Retour",
     "Cancel": "Annuler",
     "Click here to re-send the verification email.": "Cliquez ici pour renvoyer l'e-mail de vérification.",
+    "Clear the search": "Effacer la recherche",
     "Confirm": "Confirmez",
     "Confirm Password": "Confirmez le mot de passe",
     "Confirmation": "Confirmation",
+    "Create User": "Créer un utilisateur",
     "Create user": "Créer un utilisateur",
     "Created": "Créé",
     "Current Password": "Mot de passe actuel",
     "Dashboard": "Tableau de bord",
+    "Delete": "Retirer",
     "Delete Account": "Supprimer le compte",
+    "Delete user": "Supprimer un utilisateur",
+    "Deleted": "Supprimé",
+    "Edit": "Modifier",
     "Edit My Profile": "Modifier mon profil",
     "Edit Profile": "Modifier le profil",
+    "Edit user": "Modifier l'utilisateur",
     "Email": "E-mail",
     "Email Address": "Adresse e-mail",
     "Email Verification": "Email Verification",
@@ -25,7 +40,11 @@
     "Email or Username": "E-mail ou nom d'utilisateur",
     "English": "Anglaise",
     "Ensure your account is using a long, random password to stay secure.": "Assurez-vous que votre compte utilise un mot de passe long et aléatoire pour rester sécurisé.",
+    "Export added to My Files.": "Exportation ajoutée à Mes fichiers.",
+    "Export started.": "L'exportation a commencé.",
+    "Export this data": "Exporter ces données",
     "Feel free to contact the support team if you have questions or require assistance.": "N'hésitez pas à contacter l'équipe d'assistance si vous avez des questions ou si vous avez besoin d'aide.",
+    "File deleted.": "Fichier supprimé.",
     "Forgot Password": "Mot de passe oublié",
     "French": "Français",
     "Full Name": "Nom et prénom",
@@ -37,7 +56,13 @@
     "If this update is unexpected, please take immediate action to protect your account by changing your password.": "Si cette mise à jour est inattendue, veuillez prendre des mesures immédiates pour protéger votre compte en modifiant votre mot de passe.",
     "If you did not create an account, no further action is required.": "Si vous n'avez pas créé de compte, aucune autre action n'est requise.",
     "If you did not request a password reset, no further action is required.": "Si vous n’avez pas demandé de réinitialisation de mot de passe, aucune autre action n’est requise.",
+    "Impersonate user": "Usurper l'identité d'un utilisateur",
+    "Impersonating :name.": "Usurpation de :name.",
+    "Inactive": "Inactif",
+    "Is Active": "Est actif",
     "Language": "Langue",
+    "Last Updated:": "Dernière mise à jour :",
+    "Locale": "Lieu",
     "Login": "Connexion",
     "Login Change": "Changement de connexion",
     "Logout": "Déconnexion",
@@ -48,6 +73,7 @@
     "New Device Login": "Connexion à un nouvel appareil",
     "New Password": "Nouveau mot de passe",
     "Next": "Suivante",
+    "No": "Non",
     "No file chosen": "Aucun fichier choisi",
     "Optional": "Optionnel",
     "Password": "Mot de passe",
@@ -55,6 +81,7 @@
     "Please check your inbox for a verification email and follow the provided instructions.": "Veuillez vérifier votre boîte de réception pour un e-mail de vérification et suivez les instructions fournies.",
     "Please click the button below to verify your email address.": "Veuillez cliquer sur le bouton ci-dessous pour vérifier votre adresse e-mail.",
     "Please click the button below to verify your secondary email address.": "Veuillez cliquer sur le bouton ci-dessous pour vérifier votre adresse e-mail secondaire.",
+    "Please confirm": "Veuillez confirmer",
     "Please log in with your primary email address and navigate to your profile to send a new verification email.": "Veuillez vous connecter avec votre adresse e-mail principale et accéder à votre profil pour envoyer un nouvel e-mail de vérification.",
     "Please provide your password to confirm you would like to permanently delete your account.": "Veuillez fournir votre mot de passe pour confirmer que vous souhaitez supprimer définitivement votre compte.",
     "Preview this color": "Aperçu de cette couleur",
@@ -64,6 +91,7 @@
     "Profile": "Profil",
     "Profile Information": "Informations sur le profil",
     "Provide your email address and follow the instructions sent to your inbox to reset your password.": "Fournissez votre adresse e-mail et suivez les instructions envoyées dans votre boîte de réception pour réinitialiser votre mot de passe.",
+    "Refresh this data": "Actualiser ces données",
     "Remember me": "Souviens-toi de moi",
     "Register": "Registre",
     "Resend Verification Email": "Renvoyer l'e-mail de vérification",
@@ -73,10 +101,13 @@
     "Required": "Obligatoire",
     "Salutation": "Salutation",
     "Save": "Conserver",
+    "Search for": "Rechercher",
     "Secondary Email": "E-mail secondaire",
     "Secondary Email or Username": "E-mail ou nom d'utilisateur secondaire",
     "Secondary Verification": "Vérification secondaire",
     "Send Reset Link": "Envoyer le lien",
+    "Show": "Montrer",
+    "Show user": "Afficher l'utilisateur",
     "Spanish": "Espagnole",
     "Stopped impersonating.": "J'ai arrêté de me faire passer pour.",
     "Submit": "Soumettre",
@@ -85,6 +116,8 @@
     "The ip address is: :address": "L'adresse IP est : :address",
     "The login credential is: :credential": "Les identifiants de connexion sont : :credential",
     "The primary and secondary email addresses must be different.": "Les adresses e-mail principale et secondaire doivent être différentes.",
+    "The user ':attribute' has been updated.": "L'utilisateur ':attribute' a été mis à jour.",
+    "The user has been updated.": "L'utilisateur a été mis à jour.",
     "There has just been a login to your account from a new device or ip address.": "Il vient d'y avoir une connexion à votre compte à partir d'un nouvel appareil ou d'une nouvelle adresse IP.",
     "There have been changes to your account login.": "Des modifications ont été apportées à la connexion à votre compte.",
     "This action cannot be undone.": "Cette action ne peut pas être annulée.",
@@ -99,12 +132,15 @@
     "Update Theme": "Thème de mise à jour",
     "Update your account's profile information and email address.": "Mettez à jour les informations de profil et l'adresse e-mail de votre compte.",
     "Upload an avatar image": "Télécharger une image d'avatar",
+    "User": "Utilisateur",
+    "Users": "Utilisateurs",
     "Verify Email Address": "Vérifier l'adresse e-mail",
     "Verify Secondary Email Address": "Vérifier l'adresse e-mail secondaire",
     "View My Dashboard": "Afficher mon tableau de bord",
     "Warning!": "Avertissement!",
     "Welcome!": "Bienvenue!",
     "Welcome to :app!": "Bienvenue sur :app!",
+    "Yes": "Oui",
     "You are receiving this email because we received a password reset request for your account.": "Vous recevez cet e-mail car nous avons reçu une demande de réinitialisation de mot de passe pour votre compte.",
     "You must agree to check the little box.": "Vous devez accepter de cocher la petite case.",
     "Your email address has been verified!": "Votre adresse email a été vérifiée !",
