--- a/publish/lang/es.json
+++ b/publish/lang/es.json
@@ -2,22 +2,37 @@
     "A new verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación a su dirección de correo electrónico.",
     "A recent attempt to log in with your secondary email address has failed.": "Un intento reciente de iniciar sesión con su dirección de correo electrónico secundaria ha fallado.",
     "A verification link has been sent to your secondary email address.": "Se ha enviado un enlace de verificación a su dirección de correo electrónico secundaria.",
+    "Account Created:": "Cuenta creada:",
+    "Active": "Activo",
     "Administration": "Administración",
     "An email has been sent to your address.": "Se ha enviado un correo electrónico a su dirección.",
+    "Are you sure you want to delete this user?": "¿Estás seguro que deseas eliminar este usuario?",
     "Are you sure you want to delete your account?": "¿Estás seguro de que quieres eliminar tu cuenta?",
     "Are you sure you want to proceed?": "¿Estás seguro que deseas continuar?",
+    "Are you sure you want to restore this user?": "¿Estás seguro que deseas restaurar este usuario?",
+    "Avatar color updated.": "Color de avatar actualizado.",
+    "Avatar file deleted.": "Archivo de avatar eliminado.",
+    "Avatar file uploaded.": "Archivo de avatar cargado.",
+    "Back": "Devolver",
     "Cancel": "Cancelar",
     "Click here to re-send the verification email.": "Haga clic aquí para volver a enviar el correo electrónico de verificación.",
+    "Clear the search": "Limpiar la búsqueda",
     "Confirm": "Confirmar",
     "Confirm Password": "Confirmar Contraseña",
     "Confirmation": "Confirmación",
+    "Create User": "Crear usuario",
     "Create user": "Crear usuario",
     "Created": "Creada",
     "Current Password": "Contraseña actual",
     "Dashboard": "Panel",
+    "Delete": "Eliminar",
     "Delete Account": "Eliminar cuenta",
+    "Delete user": "Eliminar usuario",
+    "Deleted": "Eliminado",
+    "Edit": "Editar",
     "Edit My Profile": "Editar mi perfil",
     "Edit Profile": "Editar perfil",
+    "Edit user": "Editar usuario",
     "Email": "Correo electrónico",
     "Email Address": "Dirección de correo electrónico",
     "Email Verification": "Verificación de correo electrónico",
@@ -25,7 +40,11 @@
     "Email or Username": "Correo electrónico o nombre de usuario",
     "English": "Inglesa",
     "Ensure your account is using a long, random password to stay secure.": "Asegúrese de que su cuenta utilice una contraseña larga y aleatoria para mantenerla segura.",
+    "Export added to My Files.": "Exportación agregada a Mis archivos.",
+    "Export started.": "Se inició la exportación.",
+    "Export this data": "Exportar estos datos",
     "Feel free to contact the support team if you have questions or require assistance.": "No dude en ponerse en contacto con el equipo de soporte si tiene preguntas o necesita ayuda.",
+    "File deleted.": "Archivo eliminado.",
     "Forgot Password": "Has olvidado tu contraseña",
     "French": "Francesa",
     "Full Name": "Nombre completo",
@@ -37,7 +56,13 @@
     "If this update is unexpected, please take immediate action to protect your account by changing your password.": "Si esta actualización es inesperada, tome medidas inmediatas para proteger su cuenta cambiando su contraseña.",
     "If you did not create an account, no further action is required.": "Si no ha creado una cuenta, no es necesario realizar ninguna otra acción.",
     "If you did not request a password reset, no further action is required.": "Si no solicitó un restablecimiento de contraseña, no se requiere ninguna otra acción.",
+    "Impersonate user": "Suplantar usuario",
+    "Impersonating :name.": "Suplantando a :nombre.",
+    "Inactive": "Inactivo",
+    "Is Active": "esta activo",
     "Language": "Idioma",
+    "Last Updated:": "Última actualización:",
+    "Locale": "Lugar",
     "Login": "Acceso",
     "Login Change": "Cambiar de inicio de sesión",
     "Logout": "Cerrar sesión",
@@ -48,6 +73,7 @@
     "New Device Login": "Inicio de sesión con nuevo dispositivo",
     "New Password": "Nueva contraseña",
     "Next": "Próximo",
+    "No": "No",
     "No file chosen": "Ningún archivo elegido",
     "Optional": "Opcional",
     "Password": "Contraseña",
@@ -55,6 +81,7 @@
     "Please check your inbox for a verification email and follow the provided instructions.": "Revise su bandeja de entrada para recibir un correo electrónico de verificación y siga las instrucciones proporcionadas.",
     "Please click the button below to verify your email address.": "Haga clic en el botón a continuación para verificar su dirección de correo electrónico.",
     "Please click the button below to verify your secondary email address.": "Haga clic en el botón a continuación para verificar su dirección de correo electrónico secundaria.",
+    "Please confirm": "Por favor confirme",
     "Please log in with your primary email address and navigate to your profile to send a new verification email.": "Inicie sesión con su dirección de correo electrónico principal y navegue a su perfil para enviar un nuevo correo electrónico de verificación.",
     "Please provide your password to confirm you would like to permanently delete your account.": "Proporcione su contraseña para confirmar que desea eliminar permanentemente su cuenta.",
     "Preview this color": "Vista previa de este color",
@@ -64,6 +91,7 @@
     "Profile": "Perfil",
     "Profile Information": "Información de perfil",
     "Provide your email address and follow the instructions sent to your inbox to reset your password.": "Proporcione su dirección de correo electrónico y siga las instrucciones enviadas a su bandeja de entrada para restablecer su contraseña.",
+    "Refresh this data": "Actualizar estos datos",
     "Remember me": "Acuérdate de mí",
     "Register": "Registro",
     "Resend Verification Email": "Reenviar correo electrónico de verificación",
@@ -73,10 +101,13 @@
     "Required": "Requerido",
     "Salutation": "Saludo",
     "Save": "Guardar",
+    "Search for": "Buscar",
     "Secondary Email": "Correo electrónico secundario",
     "Secondary Email or Username": "Correo electrónico secundario o nombre de usuario",
     "Secondary Verification": "Verificación secundaria",
     "Send Reset Link": "Enviar enlace",
+    "Show": "Mirar",
+    "Show user": "Mostrar usuario",
     "Spanish": "Española",
     "Stopped impersonating.": "Dejó de hacerse pasar por alguien.",
     "Submit": "Entregar",
@@ -85,6 +116,8 @@
     "The ip address is: :address": "La dirección IP es: :address",
     "The login credential is: :credential": "La credencial de inicio de sesión es: :credential",
     "The primary and secondary email addresses must be different.": "Las direcciones de correo electrónico principal y secundaria deben ser diferentes.",
+    "The user ':attribute' has been updated.": "El usuario ':attribute' ha sido actualizado.",
+    "The user has been updated.": "El usuario ha sido actualizado.",
     "There has just been a login to your account from a new device or ip address.": "Acaba de iniciar sesión en su cuenta desde un nuevo dispositivo o dirección IP.",
     "There have been changes to your account login.": "Se han producido cambios en el inicio de sesión de su cuenta.",
     "This action cannot be undone.": "Esta acción no se puede deshacer.",
@@ -99,12 +132,15 @@
     "Update Theme": "Actualizar tema",
     "Update your account's profile information and email address.": "Actualice la información del perfil y la dirección de correo electrónico de su cuenta.",
     "Upload an avatar image": "Subir una imagen de avatar",
+    "User": "Usuario",
+    "Users": "Usuarios",
     "Verify Email Address": "Verificar dirección de correo electrónico",
     "Verify Secondary Email Address": "Verificar dirección de correo electrónico secundaria",
     "View My Dashboard": "Ver mi panel",
     "Warning!": "¡Advertencia!",
     "Welcome!": "¡Bienvenida!",
     "Welcome to :app!": "¡Bienvenido a :app!",
+    "Yes": "Sí",
     "You are receiving this email because we received a password reset request for your account.": "Recibirá este correo electrónico porque recibimos una solicitud de restablecimiento de contraseña para su cuenta.",
     "You must agree to check the little box.": "Debes aceptar marcar la pequeña casilla.",
     "Your email address has been verified!": "¡Tu dirección de correo electrónico ha sido verificada!",
