--- a/publish/lang/es.json
+++ b/publish/lang/es.json
@@ -15,8 +15,9 @@
     "Avatar file uploaded.": "Archivo de avatar cargado.",
     "Back": "Devolver",
     "Cancel": "Cancelar",
-    "Click here to re-send the verification email.": "Haga clic aquí para volver a enviar el correo electrónico de verificación.",
+    "Clear": "Limpiar",
     "Clear the search": "Limpiar la búsqueda",
+    "Click here to re-send the verification email.": "Haga clic aquí para volver a enviar el correo electrónico de verificación.",
     "Confirm": "Confirmar",
     "Confirm Password": "Confirmar Contraseña",
     "Confirmation": "Confirmación",
@@ -117,6 +118,7 @@
     "The login credential is: :credential": "La credencial de inicio de sesión es: :credential",
     "The primary and secondary email addresses must be different.": "Las direcciones de correo electrónico principal y secundaria deben ser diferentes.",
     "The user ':attribute' has been updated.": "El usuario ':attribute' ha sido actualizado.",
+    "The user has been created.": "El usuario ha sido creado.",
     "The user has been updated.": "El usuario ha sido actualizado.",
     "There has just been a login to your account from a new device or ip address.": "Acaba de iniciar sesión en su cuenta desde un nuevo dispositivo o dirección IP.",
     "There have been changes to your account login.": "Se han producido cambios en el inicio de sesión de su cuenta.",
@@ -125,6 +127,7 @@
     "This is a secure area of the application. Please confirm your password before continuing.": "Esta es una zona segura de la aplicación. Confirme su contraseña antes de continuar.",
     "This password reset link will expire in :count minutes.": "Este enlace de restablecimiento de contraseña caducará en :count minutos.",
     "Unauthorized": "No autorizado",
+    "Update": "Actualizar",
     "Update Avatar": "Actualizar avatar",
     "Update Locale": "Actualizar configuración regional",
     "Update Password": "Actualizar contraseña",
