--- a/publish/lang/fr.json
+++ b/publish/lang/fr.json
@@ -15,8 +15,9 @@
     "Avatar file uploaded.": "Fichier avatar téléchargé.",
     "Back": "Retour",
     "Cancel": "Annuler",
-    "Click here to re-send the verification email.": "Cliquez ici pour renvoyer l'e-mail de vérification.",
+    "Clear": "Effacer",
     "Clear the search": "Effacer la recherche",
+    "Click here to re-send the verification email.": "Cliquez ici pour renvoyer l'e-mail de vérification.",
     "Confirm": "Confirmez",
     "Confirm Password": "Confirmez le mot de passe",
     "Confirmation": "Confirmation",
@@ -117,6 +118,7 @@
     "The login credential is: :credential": "Les identifiants de connexion sont : :credential",
     "The primary and secondary email addresses must be different.": "Les adresses e-mail principale et secondaire doivent être différentes.",
     "The user ':attribute' has been updated.": "L'utilisateur ':attribute' a été mis à jour.",
+    "The user has been created.": "L'utilisateur a été créé.",
     "The user has been updated.": "L'utilisateur a été mis à jour.",
     "There has just been a login to your account from a new device or ip address.": "Il vient d'y avoir une connexion à votre compte à partir d'un nouvel appareil ou d'une nouvelle adresse IP.",
     "There have been changes to your account login.": "Des modifications ont été apportées à la connexion à votre compte.",
@@ -125,6 +127,7 @@
     "This is a secure area of the application. Please confirm your password before continuing.": "Il s'agit d'une zone sécurisée de l'application. Veuillez confirmer votre mot de passe avant de continuer.",
     "This password reset link will expire in :count minutes.": "Ce lien de réinitialisation de mot de passe expirera dans :count minutes.",
     "Unauthorized": "Unauthorized",
+    "Update": "Mise à jour",
     "Update Avatar": "Mettre à jour l'avatar",
     "Update Locale": "Mettre à jour les paramètres régionaux",
     "Update Password": "Mettre à jour le mot de passe",
